# autofeat

./: .gitignore  Cargo.toml  README.md  clippy.toml
.github/workflows/: ci.yml
src/: app.rs  cli.rs  lib.rs  main.rs
src/agent/: explain.rs  mod.rs  planner.rs  prompts.rs  review.rs
src/config/: mod.rs  settings.rs  theme.rs
src/dataset/: mod.rs  schema.rs  stats.rs
src/history/: mod.rs  revisions.rs
src/pipeline/: evaluate.rs  execute.rs  mod.rs
src/tools/: encode.rs  features.rs  impute.rs  mod.rs  registry.rs  scale.rs
src/tui/: mod.rs  widgets.rs
src/tui/screens/: agent.rs  dataset.rs  help.rs  mod.rs  settings.rs  tools.rs  workflow.rs
src/workflow/: graph.rs  mod.rs  node.rs  validation.rs
